--- a/darkweb/templates/index.html
+++ b/darkweb/templates/index.html
@@ -33,7 +33,12 @@
 				<span class='error'>{{ msg }}</span>
 			</div>
 			{% endif %}
-	
+			{% if search_params %}
+			<p> Search Parameters:</p>
+			{% for param_name, param_val in search_params %}
+			<p> {{ param_name }}: {{ param_val }}</p>
+			{% endif %}
+				
 			
 
 </html>
