--- a/darkweb/templates/index.html
+++ b/darkweb/templates/index.html
@@ -1,4 +1,5 @@
 <html>
+	 <a href="http://localhost:5061">Search Results</a> 
 	<div class='form'>
 		<form name='configForm' method='post' action='/'>
 			<div class='row'>
