--- a/darkweb/templates/index.html
+++ b/darkweb/templates/index.html
@@ -37,7 +37,8 @@
 			{% if search_params %}
 			<p> Search Parameters:</p>
 			{% for param_name, param_val in search_params %}
-			<p> {{ param_name }}: {{ param_val }}</p>
+				<p> {{ param_name }}: {{ param_val }}</p>
+			{% endfor %}
 			{% endif %}
 				
 			
