past searches title

--- a/darkweb/templates/index.html
+++ b/darkweb/templates/index.html
@@ -41,6 +41,7 @@
 			{% endfor %}
 			{% endif %}
 			{% if result %}
+			<p> Past Searches:</p>
 			{% for search in result %}
 				<p> {{ search }}</p>
 			{% endfor %}
