--- a/darkweb/templates/index.html
+++ b/darkweb/templates/index.html
@@ -41,7 +41,7 @@
 			{% endfor %}
 			{% endif %}
 			{% if result %}
-			<p> Past Searches:</p>
+			<p> <b>Past Searches:</b></p>
 			{% for search in result %}
 				<p> {{ search }}</p>
 			{% endfor %}
