--- a/darkweb/templates/index.html
+++ b/darkweb/templates/index.html
@@ -72,8 +72,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Dark Web Recon</h2>
-                <p>Dark Web Recon is an easy to use tool that uses a web interface to configure search modules to scour the dark web for various keywords. It then sends the results to a parser to sift through the data. From there, it sends the information in realtime to the ELK stack for further visualization and analyzation.</p>
-                
+                <p>Dark Web Recon is an easy to use tool that uses a web interface to configure search modules to search the dark web for various keywords. It then sends the results to a parser to sift through the data. From there, it sends the information in realtime to the ELK stack for further visualization and analyzation.</p>
             </div>
         </div>
     </section>
@@ -198,17 +197,18 @@
 
 <section id="Kibana" class="text-center">   
     
-    
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="http://www.cnn.com"></iframe>
-  </div>
+    <div class="embed-responsive-item">
+        <h1>Kibana Visualization</h1>
+        <iframe class="embed-responsive-item" src="http://www.cnn.com" width="1000" height="600"></iframe>
+    </div>
+
     
 </section>
 
     <!-- Footer -->
 <footer>
     <div class="container text-center">
-        <p>Fontier | Dark Web Recon</p>
+        <p>Frontier | Dark Web Recon</p>
     </div>
 </footer>
 
