--- a/darkweb/templates/index.html
+++ b/darkweb/templates/index.html
@@ -10,13 +10,13 @@
 <title>Dark Web Recon</title>
 
 <!-- Bootstrap Core CSS -->
-<link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">
+<link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Custom CSS -->
-<link href="{{url_for('static', filename='css/grayscale.css')}}" rel="stylesheet">
+<link href="../static/css/grayscale.css" rel="stylesheet">
 
 <!-- Custom Fonts -->
-<link href="{{url_for('static', filename='font-awesome/css/font-awesome.min.css')}}" rel="stylesheet" type="text/css">
+<link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
@@ -208,24 +208,24 @@ function change(dom){
     <!-- Footer -->
 <footer>
 <div class="container text-center">
-    <p>Frontier | Dark Web Recon</p>
+    <p>Dark Web Recon</p>
 </div>
 </footer>
 
 <!-- jQuery -->
-<script src="{{url_for('static', filename='js/jquery.js')}}"></script>
+<script src="../static/js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+<script src="../static/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript -->
-<script src="{{url_for('static', filename='js/jquery.easing.min.js')}}"></script>
+<script src="../static/js/jquery.easing.min.js"></script>
 
 <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-<script type="{{url_for('static', filename='text/javascript')}}" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+<script type="../static/text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="{{url_for('static', filename='js/grayscale.js')}}"></script>
+<script src="../static/js/grayscale.js"></script>
 
 
 </body>
