--- a/darkweb/templates/index.html
+++ b/darkweb/templates/index.html
@@ -85,13 +85,14 @@
 
                 <form name='paramForm' method='post' action='/addParam'>
                     <div class='row'>
-			<input type="file" name="st_file" id="st_file">
-                        <label for='addST'>Add Search Term:</label>
+	<!--		<input type="file" name="st_file" id="st_file"> -->
+
+                          <label for='addST'>Add Search Term:</label>
                         <input type='text' name='addST' class="form-control" id='addST' placeholder='Add new search term. (term1,term2,term3...)'>
                     </div>
                     <div class='row'>
                         <label for='addRE'>Add Regex:</label>
-			<input type="file" name="re_file" id="re_file">
+		<!--	<input type="file" name="re_file" id="re_file"> -->
                         <input type='text' name='addRE' class="form-control" id='addRE' placeholder='Add new regular expression. (term1,term2,term3...)'>
                     </div>
                     <div class='row'>
